--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nacs Website</title>
+
+    <!-- Boostrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <link href="./style/style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <!-- here's the start -->
+    <!-- navbar -->
+    <div class="container-fluid" id="hero">
+      <div class="nav-top">
+        <p class="text">
+          
+        </p>
+      </div>
+      <div class="nav"></div>
+    </div>
+
+    <!-- content -->
+    <div class="container-fluid" id="hero-body">
+      <div class="content"></div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
