--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <!-- here's the start -->
     <!-- navbar -->
     <div class="container-fluid" id="hero">
-      <div class="nav-top">
-        <p class="text">
-          
-        </p>
+      <div class="nav-hero">
+        <div class="row g-0" id="row-hero">
+          <div class="col-3" id="col-hero">
+            <img src="./img/fb.png" alt="icon" style="width: 18px; height: 17px;" />
+            <img src="./img/shopif.png" alt="icon" style="width: 21px; height: 19px;" />
+          </div>
+          <div class="col-9" id="col-heros"></div>
+        </div>
       </div>
       <div class="nav"></div>
     </div>
