--- a/index.html
+++ b/index.html
@@ -23,28 +23,48 @@
         <div class="row g-0" id="row-hero">
           <!-- first col -->
           <div class="col-3" id="col-hero">
-            <img src="./img/fb.png" alt="icon" style="width: 18px; height: 17px;" />
-            <img src="./img/shopif.png" alt="icon" style="width: 21px; height: 19px;" />
+            <img
+              src="./img/fb.png"
+              alt="icon"
+              style="width: 18px; height: 17px"
+            />
+            <img
+              src="./img/shopif.png"
+              alt="icon"
+              style="width: 21px; height: 19px"
+            />
           </div>
           <!-- second-col -->
           <div class="col-9" id="col-heros">
             <div class="icon-text">
-            <img src="./img/envelope.png" alt="icon" style="width: 22px; height: 23px;">
-          <span>nacsindustrial@gmail.com</span>  
+              <img
+                src="./img/envelope.png"
+                alt="icon"
+                style="width: 22px; height: 23px"
+              />
+              <span class="span">nacsindustrial@gmail.com</span>
+            </div>
+            <div class="icon-text">
+              <img
+                src="./img/phone-call.png"
+                alt="icon"
+                style="width: 22px; height: 23px"
+              />
+              <span class="span">+63 961 111 2546</span>
+            </div>
+            <div class="icon-text">
+              <img
+                src="./img/time.png"
+                alt="icon"
+                style="width: 22px; height: 23px"
+              />
+              <span class="span">Mon - Sat: 9:00am to 6:00pm</span>
+            </div>
           </div>
-          <div class="icon-text">
-            <img src="./img/phone-call.png" alt="icon" style="width: 22px; height: 23px;">
-          <span>+63 961 111 2546</span>  
-          </div>
-          <div class="icon-text">
-            <img src="./img/time.png" alt="icon" style="width: 22px; height: 23px;">
-          <span>Mon - Sat: 9:00am to 6:00pm</span>  
-          </div></div>
         </div>
       </div>
       <div class="nav"></div>
     </div>
-
     <!-- content -->
     <div class="container-fluid" id="hero-body">
       <div class="content"></div>
