--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
           </div>
         </div>
       </div>
-      <div class="nav"></div>
+
+      <div class="nav">
+          <div class="row g-0" id="navigation">
+            <div class="col-3" id="hero-nav">
+              <img src="./img/nacs logo.png" alt="logo" style="height: 50px; width:100px;">
+            </div>
+            <div class="col-9">
+
+            </div>
+          </div>
+
+      </div>
     </div>
     <!-- content -->
     <div class="container-fluid" id="hero-body">
