--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <div class="nav">
           <div class="row g-0" id="navigation">
             <div class="col-3" id="hero-nav">
-              <img src="./img/nacs logo.png" alt="logo" style="height: 50px; width:100px; ">
+              <div class="logo">
+                <img src="./img/nacs-logo.png" alt="logo" style="height: 50px; width:130px; background-color: transparent;" >
+              </div>
             </div>
             <div class="col-9">
                 
