--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     />
 
     <link href="./style/style.css" rel="stylesheet" />
+
+    <!-- for css testing and debugging -->
+    <style>
+     
+    </style>
   </head>
   <body>
     <!-- here's the start -->
@@ -65,17 +70,18 @@
       </div>
 
       <div class="nav">
-          <div class="row g-0" id="navigation">
-            <div class="col-3" id="hero-nav">
-              <div class="logo">
-                <img src="./img/nacs-logo.png" alt="logo" style="height: 50px; width:130px; background-color: transparent;" >
-              </div>
-            </div>
-            <div class="col-9">
-                
+        <div class="row g-0" id="navigation">
+          <div class="col" id="hero-nav">
+            <div class="logo">
+              <img
+                src="./img/nacs-logo.png"
+                alt="icon"
+                style="height: 50px; width: 140px"
+              />
             </div>
           </div>
-
+          <div class="col"></div>
+        </div>
       </div>
     </div>
     <!-- content -->
