--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <link href="./style/style.css" rel="stylesheet" />
 
     <!-- for css testing and debugging -->
-    <style>
-     
-    </style>
+    <style></style>
   </head>
   <body>
     <!-- here's the start -->
@@ -70,18 +68,31 @@
       </div>
 
       <div class="nav">
+
         <div class="row g-0" id="navigation">
           <div class="col" id="hero-nav">
             <div class="logo">
               <img
                 src="./img/nacs-logo.png"
                 alt="icon"
-                style="height: 50px; width: 140px"
+                style="height: 55px; width: 140px"
               />
             </div>
           </div>
-          <div class="col"></div>
+          <div class="col" id="nav__link">
+            <div class="nav__listed">
+              <ul class="nav__list">
+                <li><a href="#home" class="nav__link">HOME</a></li>
+                <li><a href="#home" class="nav__link">ABOUT</a></li>
+                <li><a href="#services" class="nav__link">SERVICES</a></li>
+                <li><a href="#aboutus" class="nav__link">SHOP</a></li>
+                <li><a href="#aboutus" class="nav__link">BLOG</a></li>
+                <li><a href="#aboutus" class="nav__link">CONTACT US</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
     <!-- content -->
