--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
       </div>
 
       <div class="nav">
-
         <div class="row g-0" id="navigation">
           <div class="col" id="hero-nav">
             <div class="logo">
@@ -92,12 +91,51 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
     <!-- content -->
     <div class="container-fluid" id="hero-body">
       <div class="content"></div>
+    </div>
+
+    <!-- Footer -->
+
+    <div class="footer">
+      <div class="row" id="spacing-footer">
+        <div class="col-6" id="footer-logo">
+          <img
+            src="./img/nacs-logo.png"
+            alt="logo"
+            style="width: 230px; height: 90px"
+          />
+        </div>
+        <div class="col" id="footer-mid">
+          <p class="text-title">Contact Info</p>
+          <p class="text-body">
+            122 N.Plymouth Way San <br />
+            Bernardino CA 92408
+          </p>
+        </div>
+        <div class="col" id="footer-end">
+          <p class="text-title">Website</p>
+          <a href="#" class="text-decoration-none">
+            Home <span class="span-footer"> Blog </span> <br>
+            About us <span class="span-footers"> Contact us </span> <br>
+            Services <span class="span-foot"> Shop </span> <br>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-end">
+      <div class="row">
+        <div class="col">
+          
+        </div>
+        <div class="col">
+          
+        </div>
+      </div>
     </div>
 
     <script
