--- a/index.html
+++ b/index.html
@@ -125,17 +125,23 @@
           </a>
         </div>
       </div>
-    </div>
 
-    <div class="footer-end">
-      <div class="row">
-        <div class="col">
-          
+        <ul class="underline" style="margin-top: 50px;"></ul>
+
+        <div class="footer-end">
+          <div class="row" id="end-footer">
+            <div class="col" id="end-text" style="background-color: transparent;">
+              <p class="text-muted">
+                @ 2025 Nacs International Inc / All Rights Reserved.
+              </p>
+            </div>
+            <div class="col" id="end-text" style="background-color: transparent;">
+              <p class="text-muted">
+                Terms / Privacy Policy
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="col">
-          
-        </div>
-      </div>
     </div>
 
     <script
