--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nacs Website</title>
+    <link rel="icon" type="image/png" href="./img/nacs-logo.png">
+    <title>Nacs International Inc</title>
 
     <!-- Boostrap 5 -->
     <link
@@ -12,12 +13,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- font awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <link href="./style/style.css" rel="stylesheet" />
 
     <!-- for css testing and debugging -->
     <style></style>
-  </head>
+  </head>               
   <body>
     <!-- here's the start -->
     <!-- navbar -->
@@ -95,7 +98,60 @@
     </div>
     <!-- content -->
     <div class="container-fluid" id="hero-body">
-      <div class="content"></div>
+      <div class="content">
+        <p class="content-title">
+            Driving Industrial Success with <br>
+            Reliable, Tailored Services
+        </p>
+        <p class="sub-title">
+          Powering your business with cutting 
+          Industrial Solutions.
+        </p>
+
+        <div class="py-5">
+          <div class="row text-start">
+            <div class="col-6 col-md-3">
+              <div class="icon-box">
+                <i class="fa-2x fa-solid fa-users"></i>
+                <p class="text-start">100+<br>
+                  Clients</p>
+              </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+              <div class="icon-box">
+                <i class="bi bi-house-door"></i>
+                <p class="text-start">Domestic<br>
+                  Sales 90%</p>
+              </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+              <div class="icon-box">
+                <i class="bi bi-house-door">
+                  <p class="text-start">Export<br>
+                    Sales 90%</p>
+                </i>
+              </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+              <div class="icon-box">
+                <i class="bi bi-house-door">
+                  <p class="text-start">Accredited<br>
+                    Distributors</p>
+                </i>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+        
+        
+        <div class="background-image">
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
