--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/nacs-logo.png">
+    <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
     <title>Nacs International Inc</title>
 
     <!-- Boostrap 5 -->
@@ -14,13 +14,16 @@
       crossorigin="anonymous"
     />
     <!-- font awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
     <link href="./style/style.css" rel="stylesheet" />
 
     <!-- for css testing and debugging -->
     <style></style>
-  </head>               
+  </head>
   <body>
     <!-- here's the start -->
     <!-- navbar -->
@@ -98,59 +101,66 @@
     </div>
     <!-- content -->
     <div class="container-fluid" id="hero-body">
-      <div class="content">
-        <p class="content-title">
-            Driving Industrial Success with <br>
-            Reliable, Tailored Services
-        </p>
-        <p class="sub-title">
-          Powering your business with cutting 
-          Industrial Solutions.
-        </p>
+      <div class="row" id="content-row">
+        <div class="col-7">
+          <div class="content">
+            <p class="content-title">
+              Driving Industrial Success with <br />
+              Reliable, Tailored Services
+            </p>
+            <p class="sub-title">
+              Powering your business with cutting Industrial Solutions.
+            </p>
 
-        <div class="py-5">
-          <div class="row text-start">
-            <div class="col-6 col-md-3">
-              <div class="icon-box">
-                <i class="fa-2x fa-solid fa-users"></i>
-                <p class="text-start">100+<br>
-                  Clients</p>
+            <div class="py-5">
+              <div class="row row-cols-auto text-start">
+                <div class="col-6 col-sm-2">
+                  <div class="icon-box">
+                    <i class="fa-2x fa-solid fa-users"></i>
+                    <p class="text-start">
+                      100+<br />
+                      Clients
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-6 col-sm-2">
+                  <div class="icon-box">
+                    <i class="fa-2x fa-solid fa-hand-holding-dollar"></i>
+                    <p class="text-start">
+                      Domestic<br />
+                      Sales 90%
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-6 col-sm-2">
+                  <div class="icon-box">
+                    <i class="fa-2x fa-solid fa-cloud-arrow-down"></i>
+                    <p class="text-start">
+                      Export<br />
+                      Sales 90%
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col-6 col-sm-2">
+                  <div class="icon-box">
+                    <i class="fa-2x fa-solid fa-truck-ramp-box"></i>
+                    <p class="text-start">
+                      Accredited<br />
+                      Distributors
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
-
-            <div class="col-6 col-md-3">
-              <div class="icon-box">
-                <i class="bi bi-house-door"></i>
-                <p class="text-start">Domestic<br>
-                  Sales 90%</p>
-              </div>
-            </div>
-
-            <div class="col-6 col-md-3">
-              <div class="icon-box">
-                <i class="bi bi-house-door">
-                  <p class="text-start">Export<br>
-                    Sales 90%</p>
-                </i>
-              </div>
-            </div>
-
-            <div class="col-6 col-md-3">
-              <div class="icon-box">
-                <i class="bi bi-house-door">
-                  <p class="text-start">Accredited<br>
-                    Distributors</p>
-                </i>
-              </div>
-            </div>
-
-
           </div>
         </div>
-        
-        
-        <div class="background-image">
-        </div>
+
+        <div class="col"></div>
+
+        <div class="background-image"></div>
       </div>
     </div>
 
@@ -175,29 +185,27 @@
         <div class="col" id="footer-end">
           <p class="text-title">Website</p>
           <a href="#" class="text-decoration-none">
-            Home <span class="span-footer"> Blog </span> <br>
-            About us <span class="span-footers"> Contact us </span> <br>
-            Services <span class="span-foot"> Shop </span> <br>
+            Home <span class="span-footer"> Blog </span> <br />
+            About us <span class="span-footers"> Contact us </span> <br />
+            Services <span class="span-foot"> Shop </span> <br />
           </a>
         </div>
       </div>
 
-        <ul class="underline" style="margin-top: 50px;"></ul>
+      <ul class="underline" style="margin-top: 50px"></ul>
 
-        <div class="footer-end">
-          <div class="row" id="end-footer">
-            <div class="col" id="end-text" style="background-color: transparent;">
-              <p class="text-muted">
-                @ 2025 Nacs International Inc / All Rights Reserved.
-              </p>
-            </div>
-            <div class="col" id="end-text" style="background-color: transparent;">
-              <p class="text-muted">
-                Terms / Privacy Policy
-              </p>
-            </div>
+      <div class="footer-end">
+        <div class="row" id="end-footer">
+          <div class="col" id="end-text" style="background-color: transparent">
+            <p class="text-muted">
+              @ 2025 Nacs International Inc / All Rights Reserved.
+            </p>
+          </div>
+          <div class="col" id="end-text" style="background-color: transparent">
+            <p class="text-muted">Terms / Privacy Policy</p>
           </div>
         </div>
+      </div>
     </div>
 
     <script
