--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- content -->
     <div class="container-fluid" id="hero-body">
       <div class="row" id="content-row">
-        <div class="col-7">
+        <div class="col-6">
           <div class="content">
             <p class="content-title">
               Driving Industrial Success with <br />
@@ -113,8 +113,16 @@
             </p>
 
             <div class="py-5">
-              <div class="row row-cols-auto text-start">
-                <div class="col-6 col-sm-2">
+              <div
+                class="row row-auto text-start"
+                style="
+                  justify-content: start;
+                  align-items: start;
+                  margin: 0;
+                 
+                "
+              >
+                <div class="col-6 col-sm-3" style="margin: 0">
                   <div class="icon-box">
                     <i class="fa-2x fa-solid fa-users"></i>
                     <p class="text-start">
@@ -124,7 +132,7 @@
                   </div>
                 </div>
 
-                <div class="col-6 col-sm-2">
+                <div class="col-6 col-sm-3" style="margin: 0">
                   <div class="icon-box">
                     <i class="fa-2x fa-solid fa-hand-holding-dollar"></i>
                     <p class="text-start">
@@ -134,7 +142,7 @@
                   </div>
                 </div>
 
-                <div class="col-6 col-sm-2">
+                <div class="col-6 col-sm-3" style="margin: 0">
                   <div class="icon-box">
                     <i class="fa-2x fa-solid fa-cloud-arrow-down"></i>
                     <p class="text-start">
@@ -144,7 +152,7 @@
                   </div>
                 </div>
 
-                <div class="col-6 col-sm-2">
+                <div class="col-6 col-sm-3" style="margin: 0">
                   <div class="icon-box">
                     <i class="fa-2x fa-solid fa-truck-ramp-box"></i>
                     <p class="text-start">
