--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               Reliable, Tailored Services
             </p>
             <p class="sub-title">
-              Powering your business with cutting Industrial Solutions.
+              Powering your business with Industrial Solutions.
             </p>
 
             <div class="py-5">
@@ -162,15 +162,33 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>  
           </div>
         </div>
 
         <div class="col"></div>
+      </div>
 
-        <div class="background-image"></div>
+
+    </div>
+
+    <div class="container-fluid" id="about">
+      <div class="hero-about">
+          <div class="row g-0" id="row-about">
+            <div class="col">
+
+            </div>
+            <div class="col" id="col2">
+                <p class="title-about">About NACS Century <br>
+                  of Excellence</p>
+
+                <p class="subtitle">
+                  
+                </p>
+          </div>
       </div>
     </div>
+    
 
     <!-- Footer -->
 
