--- a/try.html
+++ b/try.html
@@ -3,57 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
-    <title>Nacs International Inc</title>
+    <title>Hemburger Menu | Code Mentor</title>
 
-    <!-- css -->
-    <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="./style/mq.css" />
-    <!-- Boostrap 5 -->
+    <!-- Framework -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <!-- font awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      rel="stylesheet"
-    />
 
-    <!-- for css testing and debugging -->
-    <style></style>
+    <link rel="stylesheet" href="try.css" />
   </head>
   <body>
-    <container>
-      <div class="topbar">
-        <div class="row" id="hero">
-          <div class="col-3" id="col-hero">
-            <img src="./img/fb.png" alt="icon" />
-            <img src="./img/shopif.png" alt="icon" />
-          </div>
-          <div class="col-9" id="col-heroes">
-            <div class="icon-text">
-              <img src="./img/envelope.png" alt="icon" />
-              <span class="span">nacsindustrial@gmail.com</span>
-            </div>
-            <div class="icon-text">
-              <img src="./img/phone-call.png" alt="icon" />
-              <span class="span">+63 961 123 2546</span>
-            </div>
-            <div class="icon-text">
-              <img src="./img/time.png" alt="icon" />
-              <span class="span">Mon - Sat: 9:00am to 6:00pm</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </container>
-
     <nav>
       <div class="logo">
-        <img src="./img/nacs-logo.png" alt=""/>
+        <h1>Logo</h1>
       </div>
       <ul id="menuList">
         <li class="close-btn">
