--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <li class="close-btn">
           <i class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
         </li>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Product</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="">HOME</a></li>
+        <li><a href="">SHOP</a></li>
+        <li><a href="">BLOGS</a></li>
+        <li><a href="">FAQS</a></li>
+        <li><a href="">CONTACT US</a></li>
       </ul>
       <div class="menu-icon">
         <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
