--- a/index.html
+++ b/index.html
@@ -121,12 +121,58 @@
             </p>
           </div>
           <div class="box-item">
-            <div class="box"><i class="fa-solid fa-handshake-simple fa-3x"></i></div>
+            <div class="box">
+              <i class="fa-solid fa-handshake-simple fa-3x"></i>
+            </div>
             <p class="box-text">
               Accredited <br />
               Distributors
             </p>
           </div>
+        </div>
+      </div>
+      <!-- OUT PARTNERS -->
+      <div class="clients" id="logo">
+        <p class="text-center">BUSINESS PARTNERS</p>
+        <div class="logos-slide">
+          <img src="./img/suppliers/1631370012073.png" />
+          <img
+            src="./img/suppliers/0-02-06-2f91814a7affbe3f11ba1c88e2d0c1979624c931e9d213cab84e6c55375ec355_1c6dc1554503d2.png"
+          />
+          <img
+            src="./img/suppliers/307756322_494352812701958_3514013765130516898_n.png"
+          />
+          <img
+            src="./img/suppliers/341133897_1398664240899552_8603220570200623439_n.png"
+          />
+          <img src="./img/./suppliers/./TTCI.png" />
+          <img src="./img/./suppliers/./nupon supplier.png" />
+          <img src="./img/./suppliers/./GIGATOOLS.png" />
+          <img src="./img/suppliers/ALGOL1.png" />
+          <img src="./img/suppliers/american_air_filter_logo.png" />
+          <img src="./img/suppliers/Armstrong-Logo.png" />
+          <img src="./img/suppliers/Capture1.png" />
+          <img src="./img/suppliers/carrier.PNG.png" />
+          <img src="./img/suppliers/dingye_circuits_limited_logo.png" />
+          <img src="./img/suppliers/efbb9a969b62edc5d2bfaf4075d57206.png" />
+          <img src="./img/suppliers/fastenal-logo.png" />
+          <img src="./img/suppliers/logo-ammeraal1.png" />
+          <img src="./img/suppliers/metal_seal_precision_logo.png" />
+          <img src="./img/suppliers/morgan-thermal-ceramics.png" />
+          <img src="./img/suppliers/nordson.PNG.png" />
+          <img src="./img/suppliers/posiflate.png" />
+          <img
+            src="./img/suppliers/thermaflex-logo-4c_ohne-schatten_R-0de8d9df-980x350.png"
+          />
+          <img src="./img/suppliers/thumb_26542_Nutex-Equipment-Supply.png" />
+          <img src="./img/suppliers/tyco logo.PNG.png" />
+          <img
+            src="./img/suppliers/thermaflex-logo-4c_ohne-schatten_R-0de8d9df-980x350.png"
+          />
+          <img src="./img/suppliers/varin logo.png" />
+          <img src="./img/suppliers/Waco-5.png" />
+          <img src="./img/suppliers/warden logo.png" />
+          <img src="./img/suppliers/warden-machinery_380x253.png" />
         </div>
       </div>
     </div>
