--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </div>
       </div>
       <!-- OUT PARTNERS -->
+
       <div class="clients" id="logo">
-        <p class="text-center">BUSINESS PARTNERS</p>
         <div class="logos-slide">
           <img src="./img/suppliers/1631370012073.png" />
           <img
@@ -173,6 +173,80 @@
           <img src="./img/suppliers/Waco-5.png" />
           <img src="./img/suppliers/warden logo.png" />
           <img src="./img/suppliers/warden-machinery_380x253.png" />
+        </div>
+      </div>
+    </div>
+
+    <!-- product -->
+    <div class="container-fluid">
+      <div class="product">
+        <!-- text-title -->
+        <div class="product-title mb-5">
+          <p class="text-center">EXPLORE OUR BEST SELLER PRODUCT!</p>
+        </div>
+
+        <!-- product view -->
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <!--  -->
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View Product</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-auto">
+            <!--  -->
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View Product</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-auto">
+            <!--  -->
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View Product</a>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="col-auto">
+            <!--  -->
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">View Product</a>
+              </div>
+            </div>
+          </div>
+          <!--  -->
         </div>
       </div>
     </div>
