--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
       <!-- OUT PARTNERS -->
 
       <div class="clients" id="logo">
+        <p class="text-center">
+          OUR PARTNERS
+        </p>
         <div class="logos-slide">
           <img src="./img/suppliers/1631370012073.png" />
           <img
@@ -189,60 +192,103 @@
         <div class="row justify-content-center">
           <div class="col-auto">
             <!--  -->
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+            <div class="card h-100 d-flex flex-column" style="width: 18rem">
+              <img
+                src="./img/products/1.jpg"
+                class="card-img-top fixed-img"
+                alt="image"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title text-center">
+                  Economy Dial Plunger Indicator
+                </h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  0 mm to 10 mm Measuring Range MC Master No.: 20715A83 System
+                  of Measurement: Metric Dial Indicator Type: Plunger
                 </p>
-                <a href="#" class="btn btn-primary">View Product</a>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                </div>
               </div>
             </div>
           </div>
 
           <div class="col-auto">
             <!--  -->
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+            <div
+              class="card h-100 d-flex flex-column"
+              style="width: 18rem"
+              height="25rem"
+            >
+              <img
+                src="./img/products/2.jpg"
+                class="card-img-top fixed-img"
+                alt="image"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Reelcraft Grounding Reels</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Reelcraft offers a range of grounding reels designed to safely
+                  dissipate static electricity in hazardous environments, such
+                  as fuel transfer operations or chemical processing facilities.
                 </p>
-                <a href="#" class="btn btn-primary">View Product</a>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                </div>
               </div>
             </div>
           </div>
 
           <div class="col-auto">
             <!--  -->
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+            <div
+              class="card h-100 d-flex flex-column"
+              style="width: 18rem"
+              height="25rem"
+            >
+              <img
+                src="./img/products/3.jpg"
+                class="card-img-top fixed-img"
+                alt="image"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Ridgid Copper Pipe Reamer 1/2"-2"</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  RIDGID 29993 Inner-Outer Reamer (Model 227S) is a
+                  professional-grade tool designed for clean and efficient inner
+                  reaming and outer deburring of copper and stainless steel
+                  tubing.
                 </p>
-                <a href="#" class="btn btn-primary">View Product</a>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                </div>
               </div>
             </div>
           </div>
           <!--  -->
           <div class="col-auto">
             <!--  -->
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+            <div
+              class="card h-100 d-flex flex-column"
+              style="width: 18rem"
+              height="25rem"
+            >
+              <img
+                src="./img/products/4.jpg"
+                class="card-img-top fixed-img"
+                alt="image"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">REFRIGERANT Freon 407C 11.30KG</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Freon™ 407C is a non-ozone-depleting, HFC-based refrigerant
+                  blend designed to replace R-22 in air conditioning and
+                  refrigeration systems. It is widely used in residential,
+                  commercial, and light industrial HVAC systems.
                 </p>
-                <a href="#" class="btn btn-primary">View Product</a>
+                <div class="mt-auto">
+                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                </div>
               </div>
             </div>
           </div>
@@ -250,6 +296,71 @@
         </div>
       </div>
     </div>
+
+    <!-- about us and contact us -->
+
+    <div class="container-fluid g-0">
+      <div class="about-us">
+        <div class="row" id="row-details">
+          <div class="col">
+            <div class="product-title mb-5">
+              <span class="text-muted mb-2">About us</span>
+              <p class="text-start">ABOUT OUR COMPANY</p>
+            </div>
+            <p class="text-details">
+              North American Consumable Solutions is a trusted provider of
+              electrical, HVAC, engineering, and industrial consumable supplies,
+              delivering high-quality products to support a wide range of
+              commercial and industrial operations. Known for its reliability
+              and expertise, the company ensures timely delivery, technical
+              support, and tailored solutions to meet the evolving needs of its
+              clients across North America.
+
+              <br />
+              <br />
+              Leveraging deep industry expertise and a customer-first approach,
+              North American Consumable Solutions is recognized for its
+              dependable service, on-time delivery, and ability to tailor
+              solutions that align with each client’s unique requirements. From
+              routine maintenance needs to complex industrial projects, the
+              company provides not only the products but also the technical
+              support necessary to keep businesses running efficiently and
+              safely. Serving clients across North America, it stands out as a
+              reliable partner in helping industries meet their evolving
+              challenges with confidence and precision.
+            </p>
+          </div>
+          <div class="col" id="col-details">
+            <div class="bground">
+              <img src="./img/nacs-bg.jpg" alt="background" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container">
+        <div class="footer-logo mb-5">
+          <img src="./img/nacs-logo.png" alt="" />
+        </div>
+
+        <p class="footer-text">
+          <i class="fas fa-map-marker-alt"></i> 1088 Lumia Circle, Redlands CA
+          92374
+        </p>
+        <p class="footer-text"><i class="fas fa-phone"></i> +63 961 123 2546</p>
+        <p class="footer-text">
+          <i class="fas fa-envelope"></i> nacsindustrial@gmail.com
+        </p>
+
+        <p class="text-muted mt-5">© Copyright 2024, nacsinternational.com</p>
+      </div>
+    </footer>
+
+    <!-- end of line -->
 
     <script>
       function toggleMenu() {
