--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li class="close-btn">
           <i class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
         </li>
-        <li><a href="">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="">SHOP</a></li>
         <li><a href="">BLOGS</a></li>
         <li><a href="">FAQS</a></li>
@@ -134,9 +134,7 @@
       <!-- OUT PARTNERS -->
 
       <div class="clients" id="logo">
-        <p class="text-center">
-          OUR PARTNERS
-        </p>
+        <p class="text-center">OUR PARTNERS</p>
         <div class="logos-slide">
           <img src="./img/suppliers/1631370012073.png" />
           <img
