--- a/index.html
+++ b/index.html
@@ -341,18 +341,44 @@
 
     <footer>
       <div class="container">
-        <div class="footer-logo mb-5">
-          <img src="./img/nacs-logo.png" alt="" />
+        <div class="row g-0" id="footer-row">
+          <div class="col">
+            <div class="logo-footer">
+              <img src="./img/nacs-logo.png" alt="footer-logo" />
+            </div>
+          </div>
+          <div class="col">
+            <div class="footer-details">
+              <p class="text-center">
+                <span class="span-title">Contact Info </span> <br>
+                <span class="span-footer"> 112 N.Plymouth Way <br>
+                  San Bernardino CA 92408 </span>
+              </p>
+            </div>
+          </div>
+          <div class="col">
+             <div class="footer-details">
+              <p class="text-center">
+               <span class="span-title text-start">Website</span> <br>
+                <span> </span>
+              </p>
+          </div>
         </div>
 
-        <p class="footer-text">
+        <!-- <div class="footer-logo mb-5">
+          <img src="./img/nacs-logo.png" alt="" />
+        </div> -->
+
+        <!-- <p class="footer-text">
           <i class="fas fa-map-marker-alt"></i> 1088 Lumia Circle, Redlands CA
           92374
         </p>
         <p class="footer-text"><i class="fas fa-phone"></i> +63 961 123 2546</p>
         <p class="footer-text">
           <i class="fas fa-envelope"></i> nacsindustrial@gmail.com
-        </p>
+        </p> -->
+
+        <div class="line mt-5"></div>
 
         <p class="text-muted mt-5">© Copyright 2024, nacsinternational.com</p>
       </div>
